fix blog post overflow

--- a/_sass/pages/main.scss
+++ b/_sass/pages/main.scss
@@ -13,7 +13,7 @@ body {
 }
 
 main {
-    overflow: auto;
+    overflow: hidden;
 }
 
 .container {
